--- a/style.css
+++ b/style.css
@@ -106,18 +106,18 @@ footer a:hover {
 }
 /* Estilos de prioridade */
 .priority-high {
-    background-color: #fdecea; /* Vermelho claro */
-    border-left: 5px solid #dc3545;
+    background-color: #fdecea; 
+    border-left: 5px solid #00ff37;
 }
 
 .priority-medium {
-    background-color: #fff7e0; /* Amarelo claro */
+    background-color: #fff7e0;
     border-left: 5px solid #ffc107;
 }
 
 .priority-low {
-    background-color: #e0f7e9; /* Verde claro */
-    border-left: 5px solid #28a745;
+    background-color: #e0f7e9;  
+    border-left: 5px solid #eb0808;
 }
 
 /* Botões de ação */
